--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M3-PhotoEditor Pro</title>
+    <!-- M3を活かしたシンプルでカッコイイWebアイコンの設定 -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='22' fill='black'/><rect x='12' y='12' width='76' height='76' rx='10' fill='none' stroke='white' stroke-width='1.5' opacity='0.4'/><text x='50%' y='52%' dominant-baseline='central' text-anchor='middle' fill='white' font-family='system-ui, sans-serif' font-weight='900' font-size='48' letter-spacing='-2'>M3</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <style>
@@ -84,8 +86,12 @@
     <header class="h-14 bg-neutral-900 border-b border-neutral-800 flex items-center justify-between px-4 sm:px-6 shrink-0 z-20">
         <div class="flex items-center gap-4">
             <div class="flex items-center gap-2">
-                <i class="ph ph-aperture text-2xl text-neutral-100"></i>
-                <span class="font-medium tracking-widest text-neutral-100 text-sm hidden sm:block">M3-PhotoEditor</span>
+                <!-- ロゴ部分も新しいデザインに合わせる -->
+                <svg width="24" height="24" viewBox="0 0 100 100" class="shrink-0">
+                    <rect width="100" height="100" rx="22" fill="white"/>
+                    <text x="50%" y="52%" dominant-baseline="central" text-anchor="middle" fill="black" font-family="sans-serif" font-weight="900" font-size="50" letter-spacing="-2">M3</text>
+                </svg>
+                <span class="font-medium tracking-widest text-neutral-100 text-sm hidden sm:block uppercase">M3-PhotoEditor</span>
             </div>
             
             <!-- 履歴操作 -->
